cabal-version:       >=1.10
name:                spaceman
version:             0.1.0
synopsis:            Run Whitespace Programs
description:         Whitespace Implementation
license:             BSD2
license-file:        LICENCE
author:              Frank Terbeck
maintainer:          ft@bewatermyfriend.org
copyright:           © 2020 SpaceMan Workers
category:            Compiler
stability:           experimental
build-type:          Simple
extra-source-files:  CHANGES

executable spaceman
  main-is:             SpaceMan.hs
  other-modules:       SpaceMan.AbstractSyntaxTree,
                       SpaceMan.Alphabet,
                       SpaceMan.Encoding,
                       SpaceMan.Generate,
                       SpaceMan.Interpreter,
                       SpaceMan.Language,
                       SpaceMan.Machine,
                       SpaceMan.Machine.Arithmetic,
                       SpaceMan.Machine.FlowControl,
                       SpaceMan.Machine.InputOutput,
                       SpaceMan.Machine.MemoryHeap,
                       SpaceMan.Machine.MemoryStack,
                       SpaceMan.Machine.Tools,
                       SpaceMan.Machine.Types,
                       SpaceMan.Parser,
                       SpaceMan.Program,
                       SpaceMan.Transform
                       Paths_spaceman
  build-depends:       base >= 4.12,
                       cmdargs >= 0.10.20,
                       megaparsec >= 8.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
