cabal-version:       >=1.10
name:                spaceman
version:             1.0.1
synopsis:            Run Whitespace Programs
description:         Whitespace Implementation
license:             BSD2
license-file:        LICENCE
author:              Frank Terbeck
maintainer:          ft@bewatermyfriend.org
copyright:           © 2020 SpaceMan Workers
category:            Compiler
stability:           experimental
build-type:          Simple
extra-source-files:  CHANGES

source-repository head
  type: git
  location: https://gitlab.com/ft/spaceman.git

library
  exposed-modules:
      SpaceMan.AbstractSyntaxTree,
      SpaceMan.Alphabet,
      SpaceMan.Encoding,
      SpaceMan.Generate,
      SpaceMan.Interpreter,
      SpaceMan.Language,
      SpaceMan.Machine,
      SpaceMan.Machine.Arithmetic,
      SpaceMan.Machine.FlowControl,
      SpaceMan.Machine.InputOutput,
      SpaceMan.Machine.MemoryHeap,
      SpaceMan.Machine.MemoryStack,
      SpaceMan.Machine.Tools,
      SpaceMan.Machine.Types,
      SpaceMan.Parser,
      SpaceMan.Program,
      SpaceMan.Transform
  hs-source-dirs:
      src
  build-depends:
       base >= 4.12 && < 5,
       megaparsec >= 8.0.0
  default-language: Haskell2010

executable spaceman-exe
  main-is: SpaceMan.hs
  other-modules:
       Paths_spaceman
  build-depends:
       base >= 4.12 && < 5,
       cmdargs >= 0.10.20,
       spaceman
  hs-source-dirs:
      prg
  default-language: Haskell2010

test-suite unit-tests
  type: exitcode-stdio-1.0
  main-is: SpaceManTests.hs
  hs-source-dirs:
      test/unit
  build-depends:
      base >= 4.12 && < 5,
      hspec,
      spaceman
  default-language: Haskell2010

test-suite property-tests
  type: exitcode-stdio-1.0
  main-is: SpaceManProperties.hs
  hs-source-dirs:
      test/property
  build-depends:
      base >= 4.12 && < 5,
      QuickCheck,
      spaceman
  default-language: Haskell2010
